@@ -1629,7 +1629,18 @@ void qjackctlGraphCanvas::mousePressEvent ( QMouseEvent *event )
 		  && (event->modifiers() & Qt::ControlModifier))
 		  || (event->button() == Qt::MiddleButton))
 		&& m_scene->selectedItems().isEmpty()) {
-		QGraphicsView::setCursor(Qt::ClosedHandCursor);
+	#if 1//NEW_DRAG_SCROLL_MODE
+		// HACK: When about to drag-scroll,
+		// always fake a left-button press...
+		QGraphicsView::setDragMode(ScrollHandDrag);
+		QMouseEvent event2(event->type(),
+			event->position(), event->globalPosition(),
+			Qt::LeftButton, Qt::LeftButton,
+			event->modifiers() | Qt::ControlModifier);
+		QGraphicsView::mousePressEvent(&event2);
+	#else
+		QGraphicsView::setCursor(Qt::ClosedHandCursor)
+	#endif
 		m_state = DragScroll;
 	}
 }
@@ -1778,12 +1789,16 @@ void qjackctlGraphCanvas::mouseMoveEvent ( QMouseEvent *event )
 		}
 		break;
 	case DragScroll: {
+	#if 1//NEW_DRAG_SCROLL_MODE
+		QGraphicsView::mouseMoveEvent(event);
+	#else
 		QScrollBar *hbar = QGraphicsView::horizontalScrollBar();
 		QScrollBar *vbar = QGraphicsView::verticalScrollBar();
 		const QPoint delta = (pos - m_pos).toPoint();
 		hbar->setValue(hbar->value() - delta.x());
 		vbar->setValue(vbar->value() - delta.y());
 		m_pos = pos;
+	#endif
 		break;
 	}
 	default:
@@ -1897,6 +1912,12 @@ void qjackctlGraphCanvas::mouseReleaseEvent ( QMouseEvent *event )
 		break;
 	}
 
+#if 1//NEW_DRAG_SCROLL_MODE
+	if (QGraphicsView::dragMode() == ScrollHandDrag) {
+		QGraphicsView::mouseReleaseEvent(event);
+		QGraphicsView::setDragMode(NoDrag);
+	}
+#endif
 	m_state = DragNone;
 	m_item = nullptr;
 
