@@ -227,7 +227,7 @@
 <context>
     <name>qjackctlApplication</name>
     <message>
-        <location filename="../qjackctl.cpp" line="124"/>
+        <location filename="../qjackctl.cpp" line="127"/>
         <source>JACK: %1</source>
         <translation type="unfinished"></translation>
     </message>
@@ -480,13 +480,13 @@ Are you sure?</source>
 <context>
     <name>qjackctlGraphCanvas</name>
     <message>
-        <location filename="../qjackctlGraph.cpp" line="1856"/>
-        <location filename="../qjackctlGraph.cpp" line="1983"/>
+        <location filename="../qjackctlGraph.cpp" line="1868"/>
+        <location filename="../qjackctlGraph.cpp" line="2001"/>
         <source>Connect</source>
         <translation>Соединить</translation>
     </message>
     <message>
-        <location filename="../qjackctlGraph.cpp" line="2055"/>
+        <location filename="../qjackctlGraph.cpp" line="2073"/>
         <source>Disconnect</source>
         <translation>Отсоединить</translation>
     </message>
